<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#112A4A"
    android:orientation="vertical">

    <include
        layout="@layout/header_appli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#112A4A"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image"
                android:layout_width="400dp"
                android:layout_height="256dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/main_image" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="15"
                android:gravity="center"
                android:hint="Username"
                android:inputType="textEmailAddress"
                android:text="admin"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:ems="15"
                android:gravity="center"
                android:hint="Password"
                android:inputType="textPassword"
                android:text="admin"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonConnexion"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="#B4DBDBB6"
                android:text="Connexion" />

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
